--- a/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
+++ b/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
@@ -1,13 +1,35 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>medicamentosCrear</ion-title>
+    <ion-title>Crear Medicamentos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">medicamentosCrear</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+  
+    <ion-item>
+      <ion-icon name="eyedrop-outline"></ion-icon>
+      <ion-input class="inputs" label="Medicamento" labelPlacement="floating" placeholder="Lozartan"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="skull-outline"></ion-icon>
+      <ion-input class="inputs" label="Dosis" labelPlacement="floating" placeholder="50 mg"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="alarm-outline"></ion-icon>
+      <ion-input class="inputs" label="Lapso" labelPlacement="floating" placeholder="24 Hrs"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="hourglass-outline"></ion-icon>
+      <ion-input class="inputs" label="Duración" labelPlacement="floating" placeholder="24 Hras"></ion-input>
+    </ion-item>
+
+    <ion-button color="medium">
+      Registrar
+    <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
+    </ion-button>
+  </ion-list>
 </ion-content>
