--- a/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.scss
+++ b/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.scss
@@ -1,5 +1,11 @@
+.anim{
+    width: 250px;
+    height: 250px;
+    margin: -10px 70px;
+}
+
 ion-list{
-    margin: 180px 0;
+    margin: 30px 0;
 }
 
 .inputs{
