--- a/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
+++ b/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
@@ -1,10 +1,15 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
   <ion-toolbar>
     <ion-title>Crear Medicamentos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <!-- Animación -->
+  <div class="anim">
+    <ng-lottie [options]="options"></ng-lottie>
+  </div>
+
   <ion-list>
   
     <ion-item>
