--- a/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
+++ b/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
@@ -11,30 +11,71 @@
   </div>
 
   <ion-list>
+
+    <form [formGroup]="FormularioMedicamentos" (ngSubmit)="CreateMedicament(FormularioMedicamentos.value)">
+      <ion-item>
+        <ion-icon name="eyedrop-outline"></ion-icon>
+        <ion-input formControlName="nombre" class="inputs" label="Medicamento" labelPlacement="floating" placeholder="Lozartan"></ion-input>
+      </ion-item>
+
+      <!-- Validación de campo nombre requerido -->
+      <div class="mt-1" *ngIf="FormularioMedicamentos.get('nombre')?.invalid && FormularioMedicamentos.get('nombre')?.touched">
+        <ion-badge *ngIf="FormularioMedicamentos.get('nombre')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
+      </div>
+
+      <!-- Validacion de campo caracter menor que 3 -->
+      <ion-badge *ngIf="FormularioMedicamentos.get('nombre')?.hasError('minlength')" color="warning">3 Caracteres Minímos Permitidos</ion-badge>
+
+      <!-- Input de dosis -->
+
+      <ion-item>
+        <ion-icon name="skull-outline"></ion-icon>
+        <ion-input formControlName="dosis" class="inputs" label="Dosis" labelPlacement="floating" placeholder="50 mg"></ion-input>
+      </ion-item>
+
+            <!-- Validación de campo dosis requerido -->
+            <div class="mt-1" *ngIf="FormularioMedicamentos.get('dosis')?.invalid && FormularioMedicamentos.get('dosis')?.touched">
+              <ion-badge *ngIf="FormularioMedicamentos.get('dosis')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
+            </div>
+      
+            <!-- Validacion de campo dosis caracter menor que 3 -->
+            <ion-badge *ngIf="FormularioMedicamentos.get('dosis')?.hasError('minlength')" color="warning">3 Caracteres Minímos Permitidos</ion-badge>
+
+      <!-- Input de lapso -->
   
-    <ion-item>
-      <ion-icon name="eyedrop-outline"></ion-icon>
-      <ion-input class="inputs" label="Medicamento" labelPlacement="floating" placeholder="Lozartan"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-icon name="alarm-outline"></ion-icon>
+        <ion-input formControlName="lapso" class="inputs" label="Lapso" labelPlacement="floating" placeholder="24 Hrs"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-icon name="skull-outline"></ion-icon>
-      <ion-input class="inputs" label="Dosis" labelPlacement="floating" placeholder="50 mg"></ion-input>
-    </ion-item>
+      <!-- Validación de campo dosis requerido -->
+      <div class="mt-1" *ngIf="FormularioMedicamentos.get('lapso')?.invalid && FormularioMedicamentos.get('lapso')?.touched">
+      <ion-badge *ngIf="FormularioMedicamentos.get('lapso')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
+      </div>
+            
+      <!-- Validacion de campo lapso caracter menor que 3 -->
+      <ion-badge *ngIf="FormularioMedicamentos.get('lapso')?.hasError('minlength')" color="warning">3 Caracteres Minímos Permitidos</ion-badge>
 
-    <ion-item>
-      <ion-icon name="alarm-outline"></ion-icon>
-      <ion-input class="inputs" label="Lapso" labelPlacement="floating" placeholder="24 Hrs"></ion-input>
-    </ion-item>
+      <!-- Input duración -->
+  
+      <ion-item>
+        <ion-icon name="hourglass-outline"></ion-icon>
+        <ion-input formControlName="duracion" class="inputs" label="Duración" labelPlacement="floating" placeholder="24 Hras"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-icon name="hourglass-outline"></ion-icon>
-      <ion-input class="inputs" label="Duración" labelPlacement="floating" placeholder="24 Hras"></ion-input>
-    </ion-item>
+      <!-- Validación de campo dosis requerido -->
+      <div class="mt-1" *ngIf="FormularioMedicamentos.get('duracion')?.invalid && FormularioMedicamentos.get('duracion')?.touched">
+        <ion-badge *ngIf="FormularioMedicamentos.get('duracion')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
+       </div>
+            
+        <!-- Validacion de campo dosis caracter menor que 3 -->
+        <ion-badge *ngIf="FormularioMedicamentos.get('duracion')?.hasError('minlength')" color="warning">3 Caracteres Minímos Permitidos</ion-badge>
+  
+      <ion-button [disabled]="FormularioMedicamentos.invalid" color="medium" type="submit">
+        Registrar
+      <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
+      </ion-button>
+    </form>
 
-    <ion-button color="medium">
-      Registrar
-    <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
-    </ion-button>
   </ion-list>
 </ion-content>
