--- a/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.scss
+++ b/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.scss
@@ -12,6 +12,10 @@ ion-list{
     margin-left: 10px;
 }
 
+ion-badge{
+    margin-left: 30px;
+}
+
 ion-icon-create{
     font-size: 30px;
     color: #F39C12;
