--- a/src/app/private/pages/medicamentos/medicamentos.page.html
+++ b/src/app/private/pages/medicamentos/medicamentos.page.html
@@ -6,9 +6,13 @@
 
 <ion-content [fullscreen]="true">
 
+  <ion-button type="button" [routerLink]="['/medicamentos-crear']" class="add">
+    <ion-icon  slot="icon-only" name="add-outline"></ion-icon>
+  </ion-button>
+
   <!-- Aqui iria las citas del año formato: Citas, año -->
 
-  <ion-label class="citas-formato" color="dark">Citas, 2020</ion-label>
+  <ion-label class="citas-formato active" color="dark">Citas, 2020</ion-label>
 
   <!-- Habran 4 estados pendiente, perdido, exitoso, cancelada -->
   <div>
@@ -36,4 +40,5 @@
     <ion-label class="label-cita" color="tertiary">Cita del 12/12/2023</ion-label>
     <ion-badge class="label-estado" color="medium">Pendiente</ion-badge>
   </div>
+
 </ion-content>
