--- a/src/app/private/pages/medicamentos/medicamentos.page.scss
+++ b/src/app/private/pages/medicamentos/medicamentos.page.scss
@@ -1,3 +1,10 @@
+.add{
+    position: relative;
+    left: 280px;
+    width: 50px;
+    height: 50px;
+}
+
 div{
     background-color: #95a5a6a9;
     width: 350px;
@@ -11,9 +18,16 @@ div{
     margin-top: 20px;
 }
 
+.active{
+    font-size: 30px;
+    margin-left: -70px;
+    margin-top: 30px;
+}
+
 .citas-formato{
     font-size: 30px;
-    margin-left: 20px;
+    position: relative;
+    left: 30px;
 }
 
 .icon-img{
