Agregado el diseño del details faltaria solo el edit para hacer update y otras cosas

--- a/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
+++ b/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
@@ -45,7 +45,7 @@
   
       <ion-item>
         <ion-icon name="alarm-outline"></ion-icon>
-        <ion-input formControlName="lapso" class="inputs" label="Lapso" labelPlacement="floating" placeholder="24 Hrs"></ion-input>
+        <ion-input formControlName="lapso" class="inputs" label="Lapso" labelPlacement="floating" placeholder="8 Horas"></ion-input>
       </ion-item>
 
       <!-- Validación de campo dosis requerido -->
@@ -60,7 +60,7 @@
   
       <ion-item>
         <ion-icon name="hourglass-outline"></ion-icon>
-        <ion-input formControlName="duracion" class="inputs" label="Duración" labelPlacement="floating" placeholder="24 Hras"></ion-input>
+        <ion-input formControlName="duracion" class="inputs" label="Duración" labelPlacement="floating" placeholder="4 Meses"></ion-input>
       </ion-item>
 
       <!-- Validación de campo dosis requerido -->
