--- a/src/app/private/pages/medicamentos/medicamentos.page.scss
+++ b/src/app/private/pages/medicamentos/medicamentos.page.scss
@@ -1,6 +1,6 @@
 .add{
     position: relative;
-    left: 280px;
+    left: 180px;
     width: 50px;
     height: 50px;
 }
@@ -39,11 +39,32 @@ div{
 }
 
 .label-estado{
-    position: relative;
-    left: -70px;
-    top: -15px;
     font-size: 15px;
     width: 100px;
+}
+
+.label-estado-1{
+    position: relative;
+    left: 40px;
+    top: -15px;
+}
+
+.label-estado-2{
+    position: relative;
+    left: 0px;
+    top: -15px;
+}
+
+.label-estado-3{
+    position: relative;
+    left: 130px;
+    top: -45px;
+}
+
+.label-estado-4{
+    position: relative;
+    left: 15px;
+    top: -20px;
 }
 
 .label-cita{
