--- a/src/app/private/pages/medicamentos/medicamentos.page.html
+++ b/src/app/private/pages/medicamentos/medicamentos.page.html
@@ -10,35 +10,29 @@
     <ion-icon  slot="icon-only" name="add-outline"></ion-icon>
   </ion-button>
 
-  <!-- Aqui iria las citas del año formato: Citas, año -->
-
-  <ion-label class="citas-formato active" color="dark">Citas, 2020</ion-label>
-
-  <!-- Habran 4 estados pendiente, perdido, exitoso, cancelada -->
-  <div>
+  <div [routerLink]="['/medicamentos-detalle']">
     <ion-img class="icon-img" src="../../../../assets/img/library.png"></ion-img>
-    <ion-label class="label-cita" color="tertiary">Cita del 20/01/2020</ion-label>
-    <ion-badge class="label-estado" color="success">Exitoso</ion-badge>
+    <ion-label class="label-cita" color="tertiary">Pilisilina</ion-label>
+    <ion-badge class="label-estado label-estado-1" color="success">60mg</ion-badge>
   </div>
 
   <div>
     <ion-img class="icon-img" src="../../../../assets/img/library.png"></ion-img>
-    <ion-label class="label-cita" color="tertiary">Cita del 25/05/2020</ion-label>
-    <ion-badge class="label-estado" color="warning">Cancelada</ion-badge>
+    <ion-label class="label-cita" color="tertiary">Paracetamol</ion-label>
+    <ion-badge class="label-estado label-estado-2" color="warning">1/2mg</ion-badge>
   </div>
 
   <div>
     <ion-img class="icon-img" src="../../../../assets/img/library.png"></ion-img>
-    <ion-label class="label-cita" color="tertiary">Cita del 02/02/2020</ion-label>
-    <ion-badge class="label-estado" color="danger">Perdido</ion-badge>
+    <ion-label class="label-cita" color="tertiary">Lozartán<nav></nav></ion-label>
+    <ion-badge class="label-estado label-estado-3" color="danger">500mg</ion-badge>
   </div>
 
-  <ion-label class="citas-formato" color="dark">Citas, 2023</ion-label>
 
   <div>
     <ion-img class="icon-img" src="../../../../assets/img/library.png"></ion-img>
-    <ion-label class="label-cita" color="tertiary">Cita del 12/12/2023</ion-label>
-    <ion-badge class="label-estado" color="medium">Pendiente</ion-badge>
+    <ion-label class="label-cita" color="tertiary">Chepasilina</ion-label>
+    <ion-badge class="label-estado label-estado-4" color="medium">1000mg</ion-badge>
   </div>
 
 </ion-content>
