--- a/src/app/private/pages/buscar/buscar.page.html
+++ b/src/app/private/pages/buscar/buscar.page.html
@@ -1,11 +1,16 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Buscar</ion-title>
+    <ion-toolbar>
+        <ion-title>Buscar</ion-title>
 
-  </ion-toolbar>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <app-progress-bar/>
+    <app-progress-bar/>
+
+    <ion-searchbar placeholder="Buscar" show-clear-button="always" clear-icon="trash-bin"></ion-searchbar>
+
+
+
 
 </ion-content>
