--- a/src/app/private/pages/cambiar-password/cambiar-password.page.html
+++ b/src/app/private/pages/cambiar-password/cambiar-password.page.html
@@ -1,13 +1,77 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>cambiarPassword</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>cambiarPassword</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">cambiarPassword</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+    <ion-grid class="ion-padding">
+        <ion-row>
+            <ion-col size="12" class="ion-text-center">
+                <ion-icon name="lock-closed-outline" class="icon-lock"></ion-icon>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="12">
+
+                <form [formGroup]="formChangePassword" (submit)="ChangePassword(formChangePassword.value)">
+                    <ion-list>
+                        <ion-item>
+                            <ion-label position="stacked">Password actual</ion-label>
+                            <ion-input type="password" formControlName="passwordActual"></ion-input>
+                        </ion-item>
+                        <ion-item *ngIf="formChangePassword.get('password')?.invalid && formChangePassword.get('password')?.touched">
+                            <span *ngIf="formChangePassword.get('password')?.hasError('required')" class="contraseñaRequerida"> 
+                        Contraseña requerida
+                      </span>
+                        </ion-item>
+                        <ion-item class="contraseñaRequerida" *ngIf="formChangePassword.get('password')?.hasError('minlength')">
+                            5 caracteres mínimo
+                        </ion-item>
+
+
+
+                        <ion-item>
+                            <ion-label position="stacked">Password nueva</ion-label>
+                            <ion-input type="password" formControlName="passwordNueva"></ion-input>
+                        </ion-item>
+                        <ion-item *ngIf="formChangePassword.get('password')?.invalid && formChangePassword.get('password')?.touched">
+                            <span *ngIf="formChangePassword.get('password')?.hasError('required')" class="contraseñaRequerida"> 
+                        Contraseña requerida
+                      </span>
+                        </ion-item>
+                        <ion-item class="contraseñaRequerida" *ngIf="formChangePassword.get('password')?.hasError('minlength')">
+                            5 caracteres mínimo
+                        </ion-item>
+
+
+
+                        <ion-item>
+                            <ion-label position="stacked">Confirmar Password</ion-label>
+                            <ion-input type="password" formControlName="confirmarPassword"></ion-input>
+                        </ion-item>
+                        <ion-item *ngIf="formChangePassword.get('password')?.invalid && formChangePassword.get('password')?.touched">
+                            <span *ngIf="formChangePassword.get('password')?.hasError('required')" class="contraseñaRequerida"> 
+                        Contraseña requerida
+                      </span>
+                        </ion-item>
+                        <ion-item class="contraseñaRequerida" *ngIf="formChangePassword.get('password')?.hasError('minlength')">
+                            5 caracteres mínimo
+                        </ion-item>
+
+
+                    </ion-list>
+                    <ion-row>
+
+                        <ion-col>
+                            <ion-button type="submit" expand="block">Guardar</ion-button>
+                        </ion-col>
+                    </ion-row>
+                </form>
+
+
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
