--- a/src/app/private/pages/examenes-medicos-crear/examenes-medicos-crear.page.html
+++ b/src/app/private/pages/examenes-medicos-crear/examenes-medicos-crear.page.html
@@ -1,13 +1,35 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>examenesMedicosCrear</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>examenesMedicosCrear</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">examenesMedicosCrear</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <!-- <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">examenesMedicosCrear</ion-title>
+        </ion-toolbar>
+    </ion-header> -->
+
+    <form #form="ngForm" (ngSubmit)="submitForm(form)">
+        <ion-item>
+            <ion-label position="stacked">Nombre</ion-label>
+            <ion-input type="text" name="nombre" [(ngModel)]="exam.nombre" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label position="stacked">Fecha</ion-label>
+            <ion-input type="date" name="fecha" [(ngModel)]="exam.fecha" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label position="stacked">Resultado</ion-label>
+            <ion-input type="text" name="resultado" [(ngModel)]="exam.resultado" required></ion-input>
+        </ion-item>
+
+        <ion-button type="submit" expand="full">Guardar</ion-button>
+    </form>
+
+
+
 </ion-content>
