--- a/src/app/private/pages/examenes-medicos-detalle/examenes-medicos-detalle.page.html
+++ b/src/app/private/pages/examenes-medicos-detalle/examenes-medicos-detalle.page.html
@@ -1,13 +1,34 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>examenesMedicosDetalle</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>examenesMedicosDetalle</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+    <!--  <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">examenesMedicosDetalle</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
+
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>Examen de Ecografia</ion-card-title>
+            <ion-card-subtitle>12/08/2023</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+            <!-- Agrega otros detalles aquí, como resultado, etc. -->
+        </ion-card-content>
+
+
+        <ion-button (click)="editarExamen()">
+            <ion-icon name="pencil"></ion-icon> Editar
+        </ion-button>
+        <ion-button color="danger" (click)="eliminarExamen()">
+            <ion-icon name="trash"></ion-icon> Eliminar
+        </ion-button>
+
+    </ion-card>
+
+
 </ion-content>
