--- a/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
+++ b/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.html
@@ -1,13 +1,49 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>medicamentosCrear</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>medicamentosCrear</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+    <!--  <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">medicamentosCrear</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
+
+
+
+
+
+    <form #form="ngForm" (ngSubmit)="submitForm(form)">
+        <ion-item>
+            <!--  <ion-label position="floating">Nombre</ion-label> -->
+            <ion-label position="stacked">Nombre</ion-label>
+            <ion-input type="text" name="nombre" [(ngModel)]="medicamento.nombre" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label position="stacked">Dosis</ion-label>
+            <ion-input type="text" name="dosis" [(ngModel)]="medicamento.dosis" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label position="stacked">Lapso</ion-label>
+            <ion-input type="text" name="lapso" [(ngModel)]="medicamento.lapso" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label position="stacked">Duracion</ion-label>
+            <ion-input type="text" name="duracion" [(ngModel)]="medicamento.duracion" required></ion-input>
+        </ion-item>
+
+        <ion-button type="submit" expand="full">Guardar</ion-button>
+    </form>
+
+
+
+
+
+
+
 </ion-content>
