--- a/src/app/public/pages/landing/landing.page.html
+++ b/src/app/public/pages/landing/landing.page.html
@@ -1,13 +1,24 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>landing</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">landing</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-card class="ion-no-margin">
+    <ion-img src="../../../../assets/header1.png" />
+    <ion-card-header>
+      <ion-card-title class="ion-text-center">
+        MediBook
+      </ion-card-title>
+    
+    </ion-card-header>
+  </ion-card>
+
+  <p class="subtitle">Hola, somos tu aliado en salud. 
+    Con nuestra app podrás acceder a citas y diagnósticos online de forma fácil y segura.
+  </p>
+
+  <ion-card-content>
+     <div class="btn">
+      <ion-button [routerLink]="['/login']" routerLinkActive="router-link-active" color="medium" fill="solid">
+        Empezar
+      </ion-button>
+     </div>
+  </ion-card-content>
 </ion-content>
