--- a/src/app/public/pages/login/login.page.html
+++ b/src/app/public/pages/login/login.page.html
@@ -1,13 +1,65 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-card class="ion-no-margin">
+    <ion-img src="../../../../assets/header.png" />
+    <ion-card-header>
+      <ion-card-title class="ion-text-center">
+        MediBook
+      </ion-card-title>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-title>Unirse hoy</ion-title>
+
+  <ion-card-content>
+    <form [formGroup]="formLogin" (submit)="Login(formLogin.value)" class="ion-margin">
+      <ion-input label="Email" 
+          label-placement="floating" 
+          fill="outline" 
+          placeholder="Ingrese email"
+          formControlName="email">
+      </ion-input>
+ 
+      <div *ngIf="formLogin.get('email')?.invalid && formLogin.get('email')?.touched">
+        <div *ngIf="formLogin.get('email')?.hasError('required')">
+          <p class="error-message">Email requerido</p>
+        </div> 
+
+        <div *ngIf="formLogin.get('email')?.hasError('email')">
+          <p class="error-message">Email invalido</p>
+        </div>
+      </div>
+  
+      <ion-input class="ion-margin-top" label="Contraseña" 
+        label-placement="floating" 
+        fill="outline" 
+        placeholder="Ingrese Contraseña"
+        formControlName="password">
+      </ion-input>
+
+      <div *ngIf="formLogin.get('password')?.invalid && formLogin.get('password')?.touched">
+        <div *ngIf="formLogin.get('password')?.hasError('required')">
+          <p class="error-message">Contraseña requerida</p>
+        </div>
+
+        <div class="error-message" *ngIf="formLogin.get('password')?.hasError('minlength')">
+          5 caracteres mínimo
+        </div>
+
+        <div class="error-message" *ngIf="formLogin.get('password')?.hasError('maxlength')">
+          10 caracteres máximo
+        </div>
+      </div>
+      <br>
+      
+      <ion-button expand="full" color="medium" fill="solid">
+          Logearse
+      </ion-button>
+
+      <ion-button [routerLink]="['/register']" routerLinkActive="router-link-active"  class="btn" expand="full" color="medium" fill="solid">
+          Registrarse
+      </ion-button>
+
+    </form>
+  </ion-card-content>
 </ion-content>
