--- a/src/app/private/pages/medicamentos-detalle/medicamentos-detalle.page.html
+++ b/src/app/private/pages/medicamentos-detalle/medicamentos-detalle.page.html
@@ -22,13 +22,13 @@
       </ion-fab>
 
       <ion-fab class="close">
-        <ion-fab-button (click)="DeleteMedicament()" color="danger"> 
+        <ion-fab-button (click)="DeleteMedicament()" color="danger">
           <ion-icon name="close"></ion-icon>
         </ion-fab-button>
       </ion-fab>
     </div>
 
-    
+
     <form *ngIf="StateForm" [formGroup]="FormularioMedicamentoDetalle" (ngSubmit)="EditMecament(FormularioMedicamentoDetalle.value)">
       <ion-item>
         <ion-icon name="eyedrop-outline"></ion-icon>
@@ -54,12 +54,12 @@
             <div class="mt-1" *ngIf="FormularioMedicamentoDetalle.get('dosis')?.invalid && FormularioMedicamentoDetalle.get('dosis')?.touched">
               <ion-badge *ngIf="FormularioMedicamentoDetalle.get('dosis')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
             </div>
-      
+
             <!-- Validacion de campo dosis caracter menor que 3 -->
             <ion-badge *ngIf="FormularioMedicamentoDetalle.get('dosis')?.hasError('minlength')" color="warning">3 Caracteres Minímos Permitidos</ion-badge>
 
       <!-- Input de lapso -->
-  
+
       <ion-item>
         <ion-icon name="alarm-outline"></ion-icon>
         <ion-input formControlName="lapso" class="inputs" label="Lapso" labelPlacement="floating" placeholder="8 Horas"></ion-input>
@@ -69,12 +69,12 @@
       <div class="mt-1" *ngIf="FormularioMedicamentoDetalle.get('lapso')?.invalid && FormularioMedicamentoDetalle.get('lapso')?.touched">
       <ion-badge *ngIf="FormularioMedicamentoDetalle.get('lapso')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
       </div>
-            
+
       <!-- Validacion de campo lapso caracter menor que 3 -->
       <ion-badge *ngIf="FormularioMedicamentoDetalle.get('lapso')?.hasError('minlength')" color="warning">3 Caracteres Minímos Permitidos</ion-badge>
 
       <!-- Input duración -->
-  
+
       <ion-item>
         <ion-icon name="hourglass-outline"></ion-icon>
         <ion-input formControlName="duracion" class="inputs" label="Duración" labelPlacement="floating" placeholder="4 Meses"></ion-input>
@@ -84,12 +84,12 @@
       <div class="mt-1" *ngIf="FormularioMedicamentoDetalle.get('duracion')?.invalid && FormularioMedicamentoDetalle.get('duracion')?.touched">
         <ion-badge *ngIf="FormularioMedicamentoDetalle.get('duracion')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
        </div>
-            
+
         <!-- Validacion de campo dosis caracter menor que 3 -->
         <ion-badge *ngIf="FormularioMedicamentoDetalle.get('duracion')?.hasError('minlength')" color="warning">3 Caracteres Minímos Permitidos</ion-badge>
-  
+
       <ion-button [disabled]="FormularioMedicamentoDetalle.invalid" color="medium" type="submit">
-        Registrar
+        Actualizar
       <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
       </ion-button>
     </form>
