--- a/src/app/private/pages/vacunas-crear/vacunas-crear.page.html
+++ b/src/app/private/pages/vacunas-crear/vacunas-crear.page.html
@@ -1,13 +1,45 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>vacunasCrear</ion-title>
+    <ion-title>Crear Vacunas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">vacunasCrear</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <!-- Animación -->
+    <div class="anim">
+      <ng-lottie [options]="options"></ng-lottie>
+    </div>
+  
+    <ion-list>
+  
+      <form [formGroup]="FormularioVacuna" (ngSubmit)="CreateVacuna(FormularioVacuna.value)">
+        
+        <!-- Input nombre -->
+        <ion-item>
+          <ion-icon name="eyedrop-outline"></ion-icon>
+          <ion-input formControlName="nombre" class="inputs" label="Vacuna" labelPlacement="floating" placeholder="Pfizer"></ion-input>
+        </ion-item>
+  
+  
+        <!-- Input de fecha -->
+  
+        <ion-item>
+          <ion-datetime class="fecha-input" formControlName="fecha" presentation="date" [preferWheel]="true"></ion-datetime>
+        </ion-item>
+  
+    
+        <ion-button color="medium" type="submit">
+          Registrar
+        <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
+        </ion-button>
+      </form>
+  
+    </ion-list>
+  
+    <!-- Para regresar atrás -->
+    <ion-fab [routerLink]="['/vacunas']" slot="fixed" horizontal="end" vertical="bottom">
+        <ion-fab-button  color="dark">
+          <ion-icon name="chevron-back"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
